--- a/index.html
+++ b/index.html
@@ -1485,7 +1485,7 @@
   <div class="footer__bottom">
     <div class="container">
       <div class="footer__left">
-        <p class="footer__copy">© 2021 Funking — Все права защищены.</p>
+        <p class="footer__copy">© 2023 Furniking — Все права защищены.</p>
       </div>
       <div class="footer__right">
         <ul class="footer__list footer__list--row">
